--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,11 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{zhou2023higher,
+  title={Higher-dimensional spin selectivity in chiral crystals},
+  author={Zhou, Yinong and Cordova, Dmitri Leo M and Milligan, Griffin M and Arguilla, Maxx Q and Wu, Ruqian},
+  journal={arXiv preprint arXiv:2305.18637},
+  year={2023}
 }
 
 @book{einstein1956investigations,
