--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,113 +1,250 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@string{APS = {American Physical Society,}}
 
 @article{zhou2023higher,
   title={Higher-dimensional spin selectivity in chiral crystals},
   author={Zhou, Yinong and Cordova, Dmitri Leo M and Milligan, Griffin M and Arguilla, Maxx Q and Wu, Ruqian},
   journal={arXiv preprint arXiv:2305.18637},
-  year={2023}
+  year={2023},
+  abbr={arXiv}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{lopez2024bonding,
+  title={Bonding-Directed Crystallization of Ultra-Long One-Dimensional NbS3 van der Waals Nanowires},
+  author={Lopez, Diana and Zhou, Yinong and Cordova, Dmitri and Milligan, Griffin and Ogura, Kaleolani and Wu, Ruqian and Arguilla, Maxx},
+  year={2024},
+  abbr={ChemRxiv}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
+@article{liu2024controllable,
+  title={Controllable strain-driven topological phase transition and dominant surface-state transport in HfTe5},
+  author={Liu, Jinyu and Zhou, Yinong and Yepez Rodriguez, Sebastian and Delmont, Matthew A and Welser, Robert A and Ho, Triet and Sirica, Nicholas and McClure, Kaleb and Vilmercati, Paolo and Ziller, Joseph W and others},
+  journal={Nature Communications},
+  volume={15},
+  number={1},
+  pages={332},
+  year={2024},
+  publisher={Nature Publishing Group UK London},
+  abbr={Nature Comms}
+}
+
+@article{pan2023growth,
+  title={Growth of mesoscale ordered two-dimensional hydrogen-bond organic framework with the observation of flat band},
+  author={Pan, Minghu and Zhang, Xin and Zhou, Yinong and Wang, Pengdong and Bian, Qi and Liu, Hang and Wang, Xingyue and Li, Xiaoyin and Chen, Aixi and Lei, Xiaoxu and others},
+  journal={Physical Review Letters},
+  volume={130},
+  number={3},
+  pages={036203},
+  year={2023},
+  publisher={APS},
+  abbr={PRL}
+}
+
+@article{zhou2023remote,
+  title={Remote control of spin polarization of topological corner states},
+  author={Zhou, Yinong and Wu, Ruqian},
+  journal={Physical Review B},
+  volume={107},
+  number={3},
+  pages={035412},
+  year={2023},
+  publisher={APS},
+  abbr={PRB}
+}
+
+@article{zhou2019excited,
+  title={Excited quantum Hall effect: enantiomorphic flat bands in a Yin-Yang Kagome lattice},
+  author={Zhou, Yinong and Sethi, Gurjyot and Liu, Hang and Wang, Zhengfei and Liu, Feng},
+  journal={arXiv preprint arXiv:1908.03689},
+  year={2019},
+  abbr={arXiv}
+}
+
+@article{zhou2020realization,
+  title={Realization of an antiferromagnetic superatomic graphene: Dirac Mott insulator and circular dichroism Hall effect},
+  author={Zhou, Yinong and Liu, Feng},
+  journal={Nano Letters},
+  volume={21},
+  number={1},
+  pages={230--235},
+  year={2020},
+  publisher={ACS Publications},
+  abbr={Nano Letters}
+}
+
+@article{zhou2020giant,
+  title={Giant intrinsic circular dichroism of enantiomorphic flat Chern bands and flatband devices},
+  author={Zhou, Yinong and Sethi, Gurjyot and Zhang, Chao and Ni, Xiaojuan and Liu, Feng},
+  journal={Physical Review B},
+  volume={102},
+  number={12},
+  pages={125115},
+  year={2020},
+  publisher={APS},
+  abbr={PRB}
+}
+
+@article{zhou2019weyl,
+  title={Weyl points created by a three-dimensional flat band},
+  author={Zhou, Yinong and Jin, Kyung-Hwan and Huang, Huaqing and Wang, Zhengfei and Liu, Feng},
+  journal={Physical Review B},
+  volume={99},
+  number={20},
+  pages={201105},
+  year={2019},
+  publisher={APS},
+  abbr={PRB}
+}
+
+@article{zhou2016enhancing,
+  title={Enhancing the hydrogen activation reactivity of nonprecious metal substrates via confined catalysis underneath graphene},
+  author={Zhou, Yinong and Chen, Wei and Cui, Ping and Zeng, Jiang and Lin, Zhuonan and Kaxiras, Efthimios and Zhang, Zhenyu},
+  journal={Nano letters},
+  volume={16},
+  number={10},
+  pages={6058--6063},
+  year={2016},
+  publisher={ACS Publications},
+  abbr={Nano Letters}
+}
+
+@article{wu2024electronic,
+  title={Electronic transport characteristics and nanodevice designs for $\beta$-HfNCl monolayer},
+  author={Wu, Yi and Li, Yilian and Fan, Xiaozheng and Zhou, Yinong and Ma, Chunlan and Gong, Shijing and Wang, Tianxing and Yang, Feng and Wu, Ruqian and An, Yipeng},
+  journal={Results in Physics},
+  volume={57},
+  pages={107360},
+  year={2024},
+  publisher={Elsevier},
+  abbr={Results Phys.}
+}
+
+@article{cordova2024sensitive,
+  title={Sensitive thermochromic behavior of InSeI, a highly anisotropic and tubular 1D van der Waals Crystal},
+  author={Cordova, Dmitri Leo Mesoza and Zhou, Yinong and Milligan, Griffin M and Cheng, Leo and Kerr, Tyler and Ziller, Joseph and Wu, Ruqian and Arguilla, Maxx Q},
+  journal={Advanced Materials},
+  pages={2312597},
+  year={2024},
+  publisher={Wiley Online Library},
+  abbr={Adv. Materials}
+}
+
+@article{chen2024exceptional,
+  title={Exceptional electronic transport and quantum oscillations in thin bismuth crystals grown inside van der Waals materials},
+  author={Chen, Laisi and Wu, Amy X and Tulu, Naol and Wang, Joshua and Juanson, Adrian and Watanabe, Kenji and Taniguchi, Takashi and Pettes, Michael T and Campbell, Marshall A and Xu, Mingjie and others},
+  journal={Nature Materials},
+  pages={1--6},
+  year={2024},
+  publisher={Nature Publishing Group UK London},
+  abbr={Nature Materials}
+}
+
+@article{an2023higher,
+  title={Higher-order topological and nodal superconducting transition-metal sulfides MS (M= Nb and Ta)},
+  author={An, Yipeng and Chen, Juncai and Yan, Yong and Wang, Jinfeng and Zhou, Yinong and Wang, Zhengxuan and Ma, Chunlan and Wang, Tianxing and Wu, Ruqian and Liu, Wuming},
+  journal={Physical Review B},
+  volume={108},
+  number={5},
+  pages={054519},
+  year={2023},
+  publisher={APS},
+  abbr={PRB}
+}
+
+@article{chong2023electrical,
+  title={Electrical Manipulation of Topological Phases in a Quantum Anomalous Hall Insulator},
+  author={Chong, Su Kong and Zhang, Peng and Li, Jie and Zhou, Yinong and Wang, Jingyuan and Zhang, Huairuo and Davydov, Albert V and Eckberg, Christopher and Deng, Peng and Tai, Lixuan and others},
+  journal={Advanced Materials},
+  volume={35},
+  number={11},
+  pages={2207622},
+  year={2023},
+  publisher={Wiley Online Library},
+  abbr={Adv. Materials}
+}
+
+@article{liu2022high,
+  title={High-temperature fractional quantum Hall state in the Floquet kagome flat band},
+  author={Liu, Hang and Sethi, Gurjyot and Sheng, DN and Zhou, Yinong and Sun, Jia-Tao and Meng, Sheng and Liu, Feng},
+  journal={Physical Review B},
+  volume={105},
+  number={16},
+  pages={L161108},
+  year={2022},
+  publisher={APS},
+  abbr={PRB}
+}
+
+@article{sethi2021flat,
+  title={Flat-band-enabled triplet excitonic insulator in a diatomic kagome lattice},
+  author={Sethi, Gurjyot and Zhou, Yinong and Zhu, Linghan and Yang, Li and Liu, Feng},
+  journal={Physical Review Letters},
+  volume={126},
+  number={19},
+  pages={196403},
+  year={2021},
+  publisher={APS},
+  abbr={PRL}
+}
+
+@article{liu2021sierpinski,
+  title={Sierpi{\'n}ski structure and electronic topology in Bi thin films on InSb (111) B surfaces},
+  author={Liu, Chen and Zhou, Yinong and Wang, Guanyong and Yin, Yin and Li, Can and Huang, Haili and Guan, Dandan and Li, Yaoyi and Wang, Shiyong and Zheng, Hao and others},
+  journal={Physical Review Letters},
+  volume={126},
+  number={17},
+  pages={176102},
+  year={2021},
+  publisher={APS},
+  abbr={PRL}
+}
+
+@article{ni2020pi,
+  title={$\pi$-Orbital Yin--Yang Kagome bands in anilato-based metal--organic frameworks},
+  author={Ni, Xiaojuan and Zhou, Yinong and Sethi, Gurjyot and Liu, Feng},
+  journal={Physical Chemistry Chemical Physics},
+  volume={22},
+  number={44},
+  pages={25827--25832},
+  year={2020},
+  publisher={Royal Society of Chemistry},
+  abbr={PCCP}
+}
+
+@article{zhang2018band,
+  title={Band gap reduction in van der Waals layered 2D materials via a de-charge transfer mechanism},
+  author={Zhang, Chunxiao and Huang, Huaqing and Ni, Xiaojuan and Zhou, Yinong and Kang, Lei and Jiang, Wei and Chen, Haiyuan and Zhong, Jianxin and Liu, Feng},
+  journal={Nanoscale},
+  volume={10},
+  number={35},
+  pages={16759--16764},
+  year={2018},
+  publisher={Royal Society of Chemistry},
+  abbr={Nanoscale}
+}
+
+@article{hu2018ubiquitous,
+  title={Ubiquitous spin-orbit coupling in a screw dislocation with high spin coherency},
+  author={Hu, Lin and Huang, Huaqing and Wang, Zhengfei and Jiang, Wei and Ni, Xiaojuan and Zhou, Yinong and Zielasek, V and Lagally, MG and Huang, Bing and Liu, Feng},
+  journal={Physical review letters},
+  volume={121},
   number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  pages={066401},
+  year={2018},
+  publisher={APS},
+  abbr={PRL}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
+@article{zhang2017theoretical,
+  title={Theoretical discovery of a superconducting two-dimensional metal--organic framework},
+  author={Zhang, Xiaoming and Zhou, Yinong and Cui, Bin and Zhao, Mingwen and Liu, Feng},
+  journal={Nano letters},
   volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+  number={10},
+  pages={6166--6170},
+  year={2017},
+  publisher={ACS Publications},
+  abbr={Nano Letters}
 }
