--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
 
 @article{liu2024controllable,
   title={Controllable strain-driven topological phase transition and dominant surface-state transport in HfTe5},
-  author={Liu, Jinyu and Zhou, Yinong and Yepez Rodriguez, Sebastian and Delmont, Matthew A and Welser, Robert A and Ho, Triet and Sirica, Nicholas and McClure, Kaleb and Vilmercati, Paolo and Ziller, Joseph W and others},
+  author={Liu*, Jinyu and Zhou*, Yinong and Yepez Rodriguez, Sebastian and Delmont, Matthew A and Welser, Robert A and Ho, Triet and Sirica, Nicholas and McClure, Kaleb and Vilmercati, Paolo and Ziller, Joseph W and others},
   journal={Nature Communications},
   volume={15},
   number={1},
@@ -32,7 +32,7 @@
 
 @article{pan2023growth,
   title={Growth of mesoscale ordered two-dimensional hydrogen-bond organic framework with the observation of flat band},
-  author={Pan, Minghu and Zhang, Xin and Zhou, Yinong and Wang, Pengdong and Bian, Qi and Liu, Hang and Wang, Xingyue and Li, Xiaoyin and Chen, Aixi and Lei, Xiaoxu and others},
+  author={Pan*, Minghu and Zhang*, Xin and Zhou*, Yinong and Wang, Pengdong and Bian, Qi and Liu, Hang and Wang, Xingyue and Li, Xiaoyin and Chen, Aixi and Lei, Xiaoxu and others},
   journal={Physical Review Letters},
   volume={130},
   number={3},
@@ -100,7 +100,7 @@
 
 @article{zhou2016enhancing,
   title={Enhancing the hydrogen activation reactivity of nonprecious metal substrates via confined catalysis underneath graphene},
-  author={Zhou, Yinong and Chen, Wei and Cui, Ping and Zeng, Jiang and Lin, Zhuonan and Kaxiras, Efthimios and Zhang, Zhenyu},
+  author={Zhou*, Yinong and Chen*, Wei and Cui, Ping and Zeng, Jiang and Lin, Zhuonan and Kaxiras, Efthimios and Zhang, Zhenyu},
   journal={Nano letters},
   volume={16},
   number={10},
@@ -155,7 +155,7 @@
 
 @article{chong2023electrical,
   title={Electrical Manipulation of Topological Phases in a Quantum Anomalous Hall Insulator},
-  author={Chong, Su Kong and Zhang, Peng and Li, Jie and Zhou, Yinong and Wang, Jingyuan and Zhang, Huairuo and Davydov, Albert V and Eckberg, Christopher and Deng, Peng and Tai, Lixuan and others},
+  author={Chong*, Su Kong and Zhang*, Peng and Li*, Jie and Zhou, Yinong and Wang, Jingyuan and Zhang, Huairuo and Davydov, Albert V and Eckberg, Christopher and Deng, Peng and Tai, Lixuan and others},
   journal={Advanced Materials},
   volume={35},
   number={11},
