--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -133,7 +133,7 @@
 
 @article{chen2024exceptional,
   title={Exceptional electronic transport and quantum oscillations in thin bismuth crystals grown inside van der Waals materials},
-  author={Chen, Laisi and Wu, Amy X and Tulu, Naol and Wang, Joshua and Juanson, Adrian and Watanabe, Kenji and Taniguchi, Takashi and Pettes, Michael T and Campbell, Marshall A and Xu, Mingjie and others},
+  author={Chen, Laisi and Wu, Amy X and Tulu, Naol and Wang, Joshua and Juanson, Adrian and Watanabe, Kenji and Taniguchi, Takashi and Pettes, Michael T and Campbell, Marshall A and Xu, Mingjie and Gadre, Chaitanya A. and Zhou, Yinong and Chen, Hangman and Cao, Penghui and Jauregui, Luis A. and Wu, Ruqian and Pan, Xiaoqing and Sanchez-Yamagishi, Javier D.},
   journal={Nature Materials},
   pages={1--6},
   year={2024},
