--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,14 +8,18 @@
   author={Zhou, Yinong and Cordova, Dmitri Leo M and Milligan, Griffin M and Arguilla, Maxx Q and Wu, Ruqian},
   journal={arXiv preprint arXiv:2305.18637},
   year={2023},
-  abbr={arXiv}
+  abbr={arXiv},
+  abs={This study aims to investigate the interplay between chiral-induced spin-orbit coupling along the screw axis and antisymmetric spin-orbit coupling (ASOC) in the normal plane within a chiral crystal, using both general model analysis and first-principles simulations of InSeI, a chiral van der Waals crystal. While chiral molecules of light atoms typically exhibit spin selectivity only along the screw axis, chiral crystals with heavier atoms can have strong ASOC effects that influence spin-momentum locking in all directions. The resulting phase diagram of spin texture shows the potential for controlling phase transition and flipping spin by reducing symmetry through surface cleavage, thickness reduction or strain. We also experimentally synthesized high-quality InSeI crystals of the thermodynamically stable achiral analogue which showed exposed (110) facets corresponding to single-handed helices to demonstrate the potential of material realization for higher-dimensional spin selectivity in the development of spintronic devices.},
+  arxiv={2305.18637}
 }
 
 @article{lopez2024bonding,
   title={Bonding-Directed Crystallization of Ultra-Long One-Dimensional NbS3 van der Waals Nanowires},
   author={Lopez, Diana and Zhou, Yinong and Cordova, Dmitri and Milligan, Griffin and Ogura, Kaleolani and Wu, Ruqian and Arguilla, Maxx},
   year={2024},
-  abbr={ChemRxiv}
+  abbr={ChemRxiv},
+  abs={The rediscovery of one-dimensional (1D) and quasi-1D (q-1D) van der Waals (vdW) crystals ushered the realization of nascent physical properties in 1D that are suitable for applications including photonics, electronics, and sensing. However, despite renewed interest in the creation and understanding of the physical properties of 1D and q-1D vdW crystals, the lack of accessible synthetic pathways for growing well-defined nanostructures that extend across several length scales remains. Using the highly anisotropic 1D vdW NbS3-I crystal as a model phase, we present a catalyst-free and bottom-up synthetic approach to access ultra-long nanowires, with lengths reaching up to 7.9 mm and with uniform thicknesses ranging from 13 to 190 nm between individual nanowires. Control over the synthetic parameters enabled the modulation of intra- and inter-chain growth modalities to selectively yield 1D nanowires or quasi-2D nanoribbons. Comparative synthetic and density functional theory (DFT) studies with a closely related non-dimerized phase, ZrS3, show that the unusual preferential growth along 1D can be correlated to the strongly anisotropic bonding and dimeric nature of NbS3 Type-I. These results, owing to the ubiquity of dimerization in Peierls-distorted 1D crystals, will open opportunities to grow ultra-long nanowires for high-fidelity optical and electronic devices approaching the sub-nanoscale regime.},
+  html={https://chemrxiv.org/engage/chemrxiv/article-details/661dc770418a5379b0eda2f9}
 }
 
 @article{liu2024controllable,
@@ -27,7 +31,9 @@
   pages={332},
   year={2024},
   publisher={Nature Publishing Group UK London},
-  abbr={Nature Comms}
+  abbr={Nature Comms},
+  abs={The fine-tuning of topologically protected states in quantum materials holds great promise for novel electronic devices. However, there are limited methods that allow for the controlled and efficient modulation of the crystal lattice while simultaneously monitoring the changes in the electronic structure within a single sample. Here, we apply significant and controllable strain to high-quality HfTe5 samples and perform electrical transport measurements to reveal the topological phase transition from a weak topological insulator phase to a strong topological insulator phase. After applying high strain to HfTe5 and converting it into a strong topological insulator, we found that the resistivity of the sample increased by 190,500% and that the electronic transport was dominated by the topological surface states at cryogenic temperatures. Our results demonstrate the suitability of HfTe5 as a material for engineering topological properties, with the potential to generalize this approach to study topological phase transitions in van der Waals materials and heterostructures.},
+  html={https://www.nature.com/articles/s41467-023-44547-7}
 }
 
 @article{pan2023growth,
