--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,27 +3,6 @@
 
 @string{APS = {American Physical Society,}}
 
-@article{wu2024electronic,
-  title={Electronic transport characteristics and nanodevice designs for $\beta$-HfNCl monolayer},
-  author={Wu, Yi and Li, Yilian and Fan, Xiaozheng and Zhou, Yinong and Ma, Chunlan and Gong, Shijing and Wang, Tianxing and Yang, Feng and Wu, Ruqian and An, Yipeng},
-  journal={Results in Physics},
-  volume={57},
-  pages={107360},
-  year={2024},
-  publisher={Elsevier},
-  abbr={Results Phys.}
-}
-
-@article{cordova2024sensitive,
-  title={Sensitive thermochromic behavior of InSeI, a highly anisotropic and tubular 1D van der Waals Crystal},
-  author={Cordova, Dmitri Leo Mesoza and Zhou, Yinong and Milligan, Griffin M and Cheng, Leo and Kerr, Tyler and Ziller, Joseph and Wu, Ruqian and Arguilla, Maxx Q},
-  journal={Advanced Materials},
-  pages={2312597},
-  year={2024},
-  publisher={Wiley Online Library},
-  abbr={Adv. Materials}
-}
-
 @article{chen2024exceptional,
   title={Exceptional electronic transport and quantum oscillations in thin bismuth crystals grown inside van der Waals materials},
   author={Chen, Laisi and Wu, Amy X and Tulu, Naol and Wang, Joshua and Juanson, Adrian and Watanabe, Kenji and Taniguchi, Takashi and Pettes, Michael T and Campbell, Marshall A and Xu, Mingjie and Gadre, Chaitanya A. and Zhou, Yinong and Chen, Hangman and Cao, Penghui and Jauregui, Luis A. and Wu, Ruqian and Pan, Xiaoqing and Sanchez-Yamagishi, Javier D.},
@@ -31,16 +10,9 @@
   pages={1--6},
   year={2024},
   publisher={Nature Publishing Group UK London},
-  abbr={Nature Materials}
-}
-
-@article{lopez2024bonding,
-  title={Bonding-Directed Crystallization of Ultra-Long One-Dimensional NbS3 van der Waals Nanowires},
-  author={Lopez, Diana and Zhou, Yinong and Cordova, Dmitri and Milligan, Griffin and Ogura, Kaleolani and Wu, Ruqian and Arguilla, Maxx},
-  year={2024},
-  abbr={ChemRxiv},
-  abs={The rediscovery of one-dimensional (1D) and quasi-1D (q-1D) van der Waals (vdW) crystals ushered the realization of nascent physical properties in 1D that are suitable for applications including photonics, electronics, and sensing. However, despite renewed interest in the creation and understanding of the physical properties of 1D and q-1D vdW crystals, the lack of accessible synthetic pathways for growing well-defined nanostructures that extend across several length scales remains. Using the highly anisotropic 1D vdW NbS3-I crystal as a model phase, we present a catalyst-free and bottom-up synthetic approach to access ultra-long nanowires, with lengths reaching up to 7.9 mm and with uniform thicknesses ranging from 13 to 190 nm between individual nanowires. Control over the synthetic parameters enabled the modulation of intra- and inter-chain growth modalities to selectively yield 1D nanowires or quasi-2D nanoribbons. Comparative synthetic and density functional theory (DFT) studies with a closely related non-dimerized phase, ZrS3, show that the unusual preferential growth along 1D can be correlated to the strongly anisotropic bonding and dimeric nature of NbS3 Type-I. These results, owing to the ubiquity of dimerization in Peierls-distorted 1D crystals, will open opportunities to grow ultra-long nanowires for high-fidelity optical and electronic devices approaching the sub-nanoscale regime.},
-  chemrxiv={https://chemrxiv.org/engage/chemrxiv/article-details/661dc770418a5379b0eda2f9}
+  abbr={Nature Materials},
+  abs={Confining materials to two-dimensional forms changes the behaviour of the electrons and enables the creation of new devices. However, most materials are challenging to produce as uniform, thin crystals. Here we present a synthesis approach where thin crystals are grown in a nanoscale mould defined by atomically flat van der Waals (vdW) materials. By heating and compressing bismuth in a vdW mould made of hexagonal boron nitride, we grow ultraflat bismuth crystals less than 10 nm thick. Due to quantum confinement, the bismuth bulk states are gapped, isolating intrinsic Rashba surface states for transport studies. The vdW-moulded bismuth shows exceptional electronic transport, enabling the observation of Shubnikov–de Haas quantum oscillations originating from the (111) surface state Landau levels. By measuring the gate-dependent magnetoresistance, we observe multi-carrier quantum oscillations and Landau level splitting, with features originating from both the top and bottom surfaces. Our vdW mould growth technique establishes a platform for electronic studies and control of bismuth’s Rashba surface states and topological boundary modes1,2,3. Beyond bismuth, the vdW-moulding approach provides a low-cost way to synthesize ultrathin crystals and directly integrate them into a vdW heterostructure.},
+  html={https://www.nature.com/articles/s41563-024-01894-0}
 }
 
 @article{liu2024controllable,
@@ -55,6 +27,40 @@
   abbr={Nature Comms},
   abs={The fine-tuning of topologically protected states in quantum materials holds great promise for novel electronic devices. However, there are limited methods that allow for the controlled and efficient modulation of the crystal lattice while simultaneously monitoring the changes in the electronic structure within a single sample. Here, we apply significant and controllable strain to high-quality HfTe5 samples and perform electrical transport measurements to reveal the topological phase transition from a weak topological insulator phase to a strong topological insulator phase. After applying high strain to HfTe5 and converting it into a strong topological insulator, we found that the resistivity of the sample increased by 190,500% and that the electronic transport was dominated by the topological surface states at cryogenic temperatures. Our results demonstrate the suitability of HfTe5 as a material for engineering topological properties, with the potential to generalize this approach to study topological phase transitions in van der Waals materials and heterostructures.},
   html={https://www.nature.com/articles/s41467-023-44547-7}
+}
+
+@article{cordova2024sensitive,
+  title={Sensitive thermochromic behavior of InSeI, a highly anisotropic and tubular 1D van der Waals Crystal},
+  author={Cordova, Dmitri Leo Mesoza and Zhou, Yinong and Milligan, Griffin M and Cheng, Leo and Kerr, Tyler and Ziller, Joseph and Wu, Ruqian and Arguilla, Maxx Q},
+  journal={Advanced Materials},
+  pages={2312597},
+  year={2024},
+  publisher={Wiley Online Library},
+  abbr={Adv. Materials},
+  abs={Thermochromism, the change in color of a material with temperature, is the fundamental basis of optical thermometry. A longstanding challenge in realizing sensitive optical thermometers for widespread use is identifying materials with pronounced thermometric optical performance in the visible range. Herein, it is demonstrated that single crystals of indium selenium iodide (InSeI), a 1D van der Waals (vdW) solid consisting of weakly bound helical chains, exhibit considerable visible range thermochromism. A strong temperature-dependent optical band edge absorption shift ranging from 450 to 530 nm (2.8 to 2.3 eV) over a 380 K temperature range with an experimental (dEg/dT)max value extracted to be 1.26 × 10−3 eV K−1 is shown. This value lies appreciably above most dense conventional semiconductors in the visible range and is comparable to soft lattice solids. The authors further seek to understand the origin of this unusually sensitive thermochromic behavior and find that it arises from strong electron–phonon interactions and anharmonic phonons that significantly broaden band edges and lower the Eg with increasing temperature. The identification of structural signatures resulting in sensitive thermochromism in 1D vdW crystals opens avenues in discovering low-dimensional solids with strong temperature-dependent optical responses across broad spectral windows, dimensionalities, and size regimes.},
+  html={https://onlinelibrary.wiley.com/doi/10.1002/adma.202312597}
+}
+
+@article{wu2024electronic,
+  title={Electronic transport characteristics and nanodevice designs for $\beta$-HfNCl monolayer},
+  author={Wu, Yi and Li, Yilian and Fan, Xiaozheng and Zhou, Yinong and Ma, Chunlan and Gong, Shijing and Wang, Tianxing and Yang, Feng and Wu, Ruqian and An, Yipeng},
+  journal={Results in Physics},
+  volume={57},
+  pages={107360},
+  year={2024},
+  publisher={Elsevier},
+  abbr={Results Phys.},
+  abs={The mechanical properties, electronic structure, electric transport and optoelectronic properties of a recently predicted wide bandgap semiconductor β-HfNCl monolayer are systematically studied by means of first-principles calculations. β-HfNCl monolayer is isotropic in mechanical properties, whose calculated Young’s modulus, shear modulus, and layer modulus of β-HfNCl monolayer are 128.9–129.2, 44.28, and 119.46 N m−1, respectively. An appropriate tensile strain (i.e., beyond 3 %) can induce a transition from indirect bandgap to direct bandgap. In addition, we construct several conceptual nanodevice structures based on β-HfNCl monolayer, such as pn-junction diodes, pin-junction field-effect transistors (FETs) and phototransistors. The electronic transport results reveal that the pn-junction diodes have obvious rectification effect and strong electric anisotropy. Their rectification ratios and electric anisotropy ratio (η) can reach up to 106 and 3.69, respectively. The FETs have an obvious field-effect behavior with a slightly lower rectification ratio (1 0 5). Moreover, we investigate the photoelectric response of the phototransistors of β-HfNCl monolayer under the illumination of light. They have a strong response to the light whose energy is larger than the violet light, indicating that the β-HfNCl monolayer can be a platform to detect the ultraviolet light. These findings provide crucial insights into the potential applications of β-HfNCl monolayer in electronic and optoelectronic devices.},
+  html={https://www.sciencedirect.com/science/article/pii/S2211379724000421}
+}
+
+@article{lopez2024bonding,
+  title={Bonding-Directed Crystallization of Ultra-Long One-Dimensional NbS3 van der Waals Nanowires},
+  author={Lopez, Diana and Zhou, Yinong and Cordova, Dmitri and Milligan, Griffin and Ogura, Kaleolani and Wu, Ruqian and Arguilla, Maxx},
+  year={2024},
+  abbr={ChemRxiv},
+  abs={The rediscovery of one-dimensional (1D) and quasi-1D (q-1D) van der Waals (vdW) crystals ushered the realization of nascent physical properties in 1D that are suitable for applications including photonics, electronics, and sensing. However, despite renewed interest in the creation and understanding of the physical properties of 1D and q-1D vdW crystals, the lack of accessible synthetic pathways for growing well-defined nanostructures that extend across several length scales remains. Using the highly anisotropic 1D vdW NbS3-I crystal as a model phase, we present a catalyst-free and bottom-up synthetic approach to access ultra-long nanowires, with lengths reaching up to 7.9 mm and with uniform thicknesses ranging from 13 to 190 nm between individual nanowires. Control over the synthetic parameters enabled the modulation of intra- and inter-chain growth modalities to selectively yield 1D nanowires or quasi-2D nanoribbons. Comparative synthetic and density functional theory (DFT) studies with a closely related non-dimerized phase, ZrS3, show that the unusual preferential growth along 1D can be correlated to the strongly anisotropic bonding and dimeric nature of NbS3 Type-I. These results, owing to the ubiquity of dimerization in Peierls-distorted 1D crystals, will open opportunities to grow ultra-long nanowires for high-fidelity optical and electronic devices approaching the sub-nanoscale regime.},
+  chemrxiv={https://chemrxiv.org/engage/chemrxiv/article-details/661dc770418a5379b0eda2f9}
 }
 
 @article{zhou2023higher,
@@ -104,7 +110,9 @@
   pages={054519},
   year={2023},
   publisher={APS},
-  abbr={PRB}
+  abbr={PRB},
+  abs={Intrinsic topological superconducting materials are exotic and vital to develop the next-generation topological superconducting devices, topological quantum calculations, and quantum information technologies. Here, we predict the topological and nodal superconductivity of NiAs-type 𝑀⁢S (𝑀=NbandTa) transition-metal sulfides. We reveal their higher-order topology nature with an index of 𝑍4=2. These materials have a higher 𝑇c than the Nb or Ta metal superconductors due to their flat band and strong electron-phonon coupling nature. Electron doping and lighter isotopes can effectively enhance the 𝑇c. Our findings show that the 𝑀⁢S (𝑀=NbandTa) systems can be platforms to study exotic physics in the higher-order topological superconductors, and provide a theoretical support to utilize them as the topological superconducting devices in the field of advanced topological quantum calculations and information technologies.},
+  html={https://journals.aps.org/prb/abstract/10.1103/PhysRevB.108.054519}
 }
 
 @article{chong2023electrical,
@@ -116,7 +124,9 @@
   pages={2207622},
   year={2023},
   publisher={Wiley Online Library},
-  abbr={Adv. Materials}
+  abbr={Adv. Materials},
+  abs={Quantum anomalous Hall phases arising from the inverted band topology in magnetically doped topological insulators have emerged as an important subject of research for quantization at zero magnetic fields. Though necessary for practical implementation, sophisticated electrical control of molecular beam epitaxy (MBE)-grown quantum anomalous Hall matter have been stymied by growth and fabrication challenges. Here, a novel procedure is demonstrated, employing a combination of thin-film deposition and 2D material stacking techniques, to create dual-gated devices of the MBE-grown quantum anomalous Hall insulator, Cr-doped (Bi,Sb)2Te3. In these devices, orthogonal control over the field-induced charge density and the electric displacement field is demonstrated. A thorough examination of material responses to tuning along each control axis is presented, realizing magnetic property control along the former and a novel capability to manipulate the surface exchange gap along the latter. Through electrically addressing the exchange gap, the capabilities to either strengthen the quantum anomalous Hall state or suppress it entirely and drive a topological phase transition to a trivial state are demonstrated. The experimental result is explained using first principle theoretical calculations, and establishes a practical route for in situ control of quantum anomalous Hall states and topology.},
+  html={https://onlinelibrary.wiley.com/doi/full/10.1002/adma.202207622}
 }
 
 @article{liu2022high,
